[feat] Added video info download

--- a/electron-builder.json5
+++ b/electron-builder.json5
@@ -1,9 +1,6 @@
-/**
- * @see https://www.electron.build/configuration/configuration
- */
 {
-  "appId": "YourAppID",
-  "asar": true,
+  "appId": "masterweber.youtube-downloader",
+  "asar": false,
   "directories": {
     "output": "release/${version}"
   },
