--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "youtube-downloader",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "main": "dist-electron/main/index.js",
   "description": "Youtube video and playlist downloader",
   "author": "Master Weber <master.weber@outlook.com>",
@@ -14,14 +14,14 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^3.2.0",
-    "electron": "^21.2.3",
+    "electron": "^21.3.0",
     "electron-builder": "^23.6.0",
     "typescript": "^4.8.4",
     "unplugin-auto-import": "^0.11.4",
     "unplugin-element-plus": "^0.4.1",
     "unplugin-vue-components": "^0.22.9",
     "vite": "^3.2.3",
-    "vite-electron-plugin": "^0.5.1",
+    "vite-plugin-electron": "^0.10.4",
     "vite-plugin-electron-renderer": "^0.10.3",
     "vue": "^3.2",
     "vue-tsc": "^1.0.9"
@@ -43,8 +43,10 @@
     "@element-plus/icons-vue": "^2.0.10",
     "@vueuse/core": "^9.5.0",
     "@vueuse/electron": "^9.5.0",
-    "element-plus": "^2.2.20",
+    "element-plus": "^2.2.21",
     "pinia": "^2.0.23",
-    "vue-router": "^4.1.6"
+    "update": "^0.7.4",
+    "vue-router": "^4.1.6",
+    "youtube-dl-exec": "^2.1.8"
   }
 }
