--- a/package.json
+++ b/package.json
@@ -13,18 +13,18 @@
     "node": "^14.18.0 || >=16.0.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^3.2.0",
-    "electron": "^21.3.0",
+    "@vitejs/plugin-vue": "^4.0.0",
+    "electron": "^22.0.0",
     "electron-builder": "^23.6.0",
-    "typescript": "^4.8.4",
+    "typescript": "^4.9.4",
     "unplugin-auto-import": "^0.11.4",
     "unplugin-element-plus": "^0.4.1",
     "unplugin-vue-components": "^0.22.9",
-    "vite": "^3.2.3",
+    "vite": "^4.0.1",
     "vite-plugin-electron": "^0.10.4",
-    "vite-plugin-electron-renderer": "^0.10.3",
+    "vite-plugin-electron-renderer": "^0.10.4",
     "vue": "^3.2",
-    "vue-tsc": "^1.0.9"
+    "vue-tsc": "^1.0.13"
   },
   "debug": {
     "env": {
@@ -41,12 +41,14 @@
   ],
   "dependencies": {
     "@element-plus/icons-vue": "^2.0.10",
-    "@vueuse/core": "^9.5.0",
-    "@vueuse/electron": "^9.5.0",
-    "element-plus": "^2.2.21",
-    "pinia": "^2.0.23",
+    "@vueuse/core": "^9.6.0",
+    "@vueuse/electron": "^9.6.0",
+    "class-transformer": "^0.5.1",
+    "element-plus": "^2.2.26",
+    "pinia": "^2.0.28",
+    "reflect-metadata": "^0.1.13",
     "update": "^0.7.4",
     "vue-router": "^4.1.6",
-    "youtube-dl-exec": "^2.1.8"
+    "youtube-dl-exec": "^2.1.10"
   }
 }
